// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 8,
    }
  }
>
  <Text>
    Something went wrong
  </Text>
</View>
`;

exports[`should render loading 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 8,
    }
  }
>
  <ActivityIndicator
    size="large"
  />
</View>
`;

exports[`should render with continents 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 8,
    }
  }
>
  <Memo(Pressable)
    onPress={[Function]}
    style={
      {
        "backgroundColor": "#049",
        "borderRadius": 16,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "flexWrap": "wrap",
            "fontSize": 25,
          }
        }
      >
        Pangea
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 15,
          }
        }
      >
        PG
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EEF",
          "borderRadius": 16,
          "display": "flex",
          "height": 125,
          "justifyContent": "center",
          "padding": 8,
          "width": 125,
        }
      }
    >
      <ContinentSvg
        code="PG"
      />
    </View>
  </Memo(Pressable)>
  <Memo(Pressable)
    onPress={[Function]}
    style={
      {
        "backgroundColor": "#049",
        "borderRadius": 16,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "flexWrap": "wrap",
            "fontSize": 25,
          }
        }
      >
        Gondwana
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 15,
          }
        }
      >
        GW
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EEF",
          "borderRadius": 16,
          "display": "flex",
          "height": 125,
          "justifyContent": "center",
          "padding": 8,
          "width": 125,
        }
      }
    >
      <ContinentSvg
        code="GW"
      />
    </View>
  </Memo(Pressable)>
  <Memo(Pressable)
    onPress={[Function]}
    style={
      {
        "backgroundColor": "#049",
        "borderRadius": 16,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "flexWrap": "wrap",
            "fontSize": 25,
          }
        }
      >
        Pannotia
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 15,
          }
        }
      >
        PN
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EEF",
          "borderRadius": 16,
          "display": "flex",
          "height": 125,
          "justifyContent": "center",
          "padding": 8,
          "width": 125,
        }
      }
    >
      <ContinentSvg
        code="PN"
      />
    </View>
  </Memo(Pressable)>
</View>
`;
